# hungarian-algorithm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.bat  compile.ps1
examples/: main.cpp
include/: hungarian.h
src/: hungarian.cpp
tests/: test_hungarian.cpp
